<resources>
    <string name="app_name">Think and go</string>
    <string name="play_text">Play</string>
    <string name="score_text">Scores</string>
    <string name="exit_text">Exit</string>
    <string name="select_difficulty">Select the difficulty level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="player">Player</string>
    <string name="add_data">Data inserted</string>
    <string name="not_inserted_data">Data not inserted</string>
    <string name="error">Error</string>
    <string name="message">No data in database</string>
    <string name="data">Data</string>
    <string name="deleteData">Delete scores</string>
    <string name="deletedDatabase">Data has been deleted</string>
    <string name="notDeletedDatabase">Data has not been deleted</string>
    <string name="exit_asking">Do you want to exit the game?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
</resources>
