<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">

        <TextView
            android:id="@+id/nazwaGry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="80dp"
            android:text="@string/app_name"
            android:gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/obrazek_gry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:src="@drawable/labirynt"
            android:layout_below="@+id/nazwaGry"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/graj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_text"
                android:background="@color/buttonColor"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/wyniki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score_text"
                android:background="@color/buttonColor"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/usun_tabele"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleteData"
                android:background="@color/buttonColor"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/wyjście"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit_text"
                android:background="@color/buttonColor"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>